# math-lib

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
02_01_horner_scheme/: CMakeLists.txt  horner.hpp  main.cpp
04_02_03/: main.cpp  mainp.cpp
Gauß-interpolation/: Gauss.hpp  main.cpp
common/complex/: CMakeLists.txt  complex.hpp  complex_test.cpp
common/math/: factorial.hpp
common/matrix/: CMakeLists.txt  matrix.hpp  matrix_test.cpp
complex_matrices/: main.cpp
fourier_transform/: main.cpp
gauss_determinant/: mainp.cpp
vector_multiplication/: main.cpp
